<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/currentSaldo"
                android:layout_centerHorizontal="true"
                android:text="@string/availablemoney"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/currentSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#fff"
                android:textSize="50sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="10dp">

            <Button
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prev"
                android:textSize="20sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textAlignment="center" />
            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NEXT"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textAlignment="center" />
            <Button
                android:id="@+id/tgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2017-03-21"
                android:textSize="20sp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/prev"
                android:layout_toStartOf="@+id/next"/>

            <ListView
                android:id="@+id/outList"
                android:layout_below="@id/tgl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:scrollbars="none"></ListView>

            <LinearLayout
                android:id="@+id/emptyview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:visibility="gone"
               >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_add_alert_black_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/noexpense"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/todayexpense"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/todayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123.000"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>